--- a/gb/23/8/19/n14056859.md
+++ b/gb/23/8/19/n14056859.md
@@ -2,13 +2,13 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>《青春猪头少年不会梦到娇怜外出妹》：妹妹考高中 哥哥也立功</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14056860-630569-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14056861-630570-600x400.jpg" />
 <h6>《青春猪头少年不会梦到娇怜外出妹》剧照。（木棉花提供）
 </h6>
 <hr>
 <p>【大纪元2023年08月19日讯】日本动漫《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%92%E6%98%A5%E7%8C%AA%E5%A4%B4%E5%B0%91%E5%B9%B4.md#1">青春猪头少年</a>》系列以恋爱元素及各类神奇事件为主要卖点，但男主角与妹妹的手足情谊也是重要面向，如今新推出的剧场版作品《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%92%E6%98%A5%E7%8C%AA%E5%A4%B4%E5%B0%91%E5%B9%B4%E4%B8%8D%E4%BC%9A%E6%A2%A6%E5%88%B0%E5%A8%87%E6%80%9C%E5%A4%96%E5%87%BA%E5%A6%B9.md#1">青春猪头少年不会梦到娇怜外出妹</a>》（Rascal Does Not Dream of a Sister Venturing Out），便以帮助妹妹升学为故事核心，并塑造出有观赏性的温馨故事。</p>
 <p>故事背景为，男主角梓川咲太的妹妹花枫此前曾因遭同学霸凌，一度过着足不出户的生活，如今已在咲太等亲友的帮助下逐渐克服阴霾，摆脱“宅女”生活。而花枫在迈向正轨之余，也迎来升上高中的人生新阶段，并且以考上兄长就读的学校为目标。但此前毕竟脱离正常生活太久，这项愿望也变得格外有挑战性。</p>
-<figure id="attachment_14056861" aria-describedby="caption-attachment-14056861" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14056861-630570.jpg"><img class=" wp-image-14056861" src="https://i.epochtimes.com/assets/uploads/2023/08/id14056861-630570.jpg" alt="" width="599" b="337" /></a><figcaption id="caption-attachment-14056861" class="wp-caption-text">《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%92%E6%98%A5%E7%8C%AA%E5%A4%B4%E5%B0%91%E5%B9%B4%E4%B8%8D%E4%BC%9A%E6%A2%A6%E5%88%B0%E5%A8%87%E6%80%9C%E5%A4%96%E5%87%BA%E5%A6%B9.md#1">青春猪头少年不会梦到娇怜外出妹</a>》剧照。（木棉花提供）</figcaption></figure>
+<figure id="attachment_14056860" aria-describedby="caption-attachment-14056860" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14056860-630569.jpg"><img class=" wp-image-14056860" src="https://i.epochtimes.com/assets/uploads/2023/08/id14056860-630569.jpg" alt="" width="599" b="337" /></a><figcaption id="caption-attachment-14056860" class="wp-caption-text">《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%92%E6%98%A5%E7%8C%AA%E5%A4%B4%E5%B0%91%E5%B9%B4%E4%B8%8D%E4%BC%9A%E6%A2%A6%E5%88%B0%E5%A8%87%E6%80%9C%E5%A4%96%E5%87%BA%E5%A6%B9.md#1">青春猪头少年不会梦到娇怜外出妹</a>》剧照。（木棉花提供）</figcaption></figure>
 <p>在原作动漫影集中，被称为“思春期症候群”的现象是重要设定，包含跟他人交换身体、仿佛变成隐形人、陷入时间轮回、出现双重人格等各类离奇事件。本片开场起的戏码安排，也能让人联想到此类具有神秘色彩的元素，埋下具有悬念性质的伏笔。往后的转折则能让故事更趋近于现实面，为电影调性奠定基调。</p>
 <h2>妹妹有兄控属性 让角色关系更有趣</h2>
 <p>妹妹花枫身为本片的核心人物，电影对其戏码的塑造也能发扬趣味性，其与兄长咲太的对手戏，能在角色的言谈举止上，有效凸显其具有“兄控”色彩的人物属性。额外特质的加持，也让兄妹关系的塑造不会仅止于深厚的手足情感，而是能更有火花，在角色互动能增添占有欲这类可爱元素，为剧情增添戏剧效果。</p>
@@ -33,47 +33,41 @@
 <figure id="attachment_14056868" aria-describedby="caption-attachment-14056868" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14056868-630577.jpg"><img class=" wp-image-14056868" src="https://i.epochtimes.com/assets/uploads/2023/08/id14056868-630577.jpg" alt="" width="599" b="337" /></a><figcaption id="caption-attachment-14056868" class="wp-caption-text">《青春猪头少年不会梦到娇怜外出妹》剧照。（木棉花提供）</figcaption></figure>
 <figure id="attachment_14056869" aria-describedby="caption-attachment-14056869" style="width: 401px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14056869-630578.jpg"><img class=" wp-image-14056869" src="https://i.epochtimes.com/assets/uploads/2023/08/id14056869-630578.jpg" alt="" width="401" b="569" /></a><figcaption id="caption-attachment-14056869" class="wp-caption-text">《青春猪头少年不会梦到娇怜外出妹》电影海报。（木棉花提供）</figcaption></figure>
 <p>责任编辑：黄珊妮</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/22/n14039566.md#1">《哆啦A梦：大雄与天空的理想乡》影评：美妙乌托邦 也有警世效果</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044015.md#1">《瓢虫女爵和黑猫诺尔大电影》影评：英雄合作 缔造浪漫喜剧</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044196.md#1">《电影版 TOKYO MER 行动急诊室》影评：一场大火 深化医师英雄形象</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048597.md#1">《忍者龟：变种大乱斗》影评：特殊动物融入人类社会 并非不可能</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/9/n14050509.md#1">《七大罪：爱丁堡的恩怨2》影评：英雄之子如今也发光发热</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/9/n14132812.md#1">《欢迎来到驹田蒸馏所》影评：复原经典名酒大不易</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14131226.md#1">《旺卡》影评：美味的巧克力 也可能为视觉盛宴</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14127527.md#1">《变身沃买尬》影评：一家人交换身体 成打破隔阂契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/25/n14124064.md#1">《拿破仑》影评：大起大落的君王 仍是法国一代传奇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/22/n14121492.md#1">《毕业有蜥望》影评：一只蜥蜴化身孩子的人生导师</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11437710.md#1" target="_blank">林辉：国民党撤至台湾后破获的中共渗透大案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494526.md#1" target="_blank">英国女士秘鲁探险 偶遇大法后改变人生</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/30/n11622063.md#1" target="_blank">林辉：中共对赵州桥的破坏令人叹惋</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/6/9/n7982398.md#1" target="_blank">大陆教师：婆婆神奇经历改变我的世界观</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052368.md#1">聊斋?山歌罗刹海市 隐喻之弹激起千层浪 马户又鸟知是谁？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053239.md#1">【未解之谜】震惊世界 悬空寺之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14047740.md#1">【古道人生】皇帝因何震怒而将少年科甲的县令处决？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14051916.md#1">媲美米开朗基罗《大卫》：巴洛克艺术家吉安?贝尼尼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053717.md#1">“靠山”不可靠  皇上厚爱的驸马爷走上不归路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056718.md#1">【新闻大破解】李尚福访两俄 美日韩重塑印太</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056730.md#1">【马克时空】波兰打造欧洲最强陆军 全西式武器</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056764.md#1">【新唐人快报】人民币跌向16年低点 北京两难</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14055488.md#1">秦刚缺席中共国务院会议 外交部官网信息有变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14055641.md#1">岳山：习近平打造更封闭政治经济黑箱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14056209.md#1">投资家：中国经济模式已被淘汰 不会再起飞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054675.md#1">张国立公司被强制执行452万 邓婕动态引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14056147.md#1">遭封杀被消失2年 赵薇晒佛像照首次公开行踪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14055149.md#1">《芭比》“败坏道德”或“九段线”数国禁播</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14055796.md#1">《攻其不备》故事惹议 波及珊卓的影后头衔</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14055328.md#1">陶晶莹携子女韩国游  TWICE周子瑜当地陪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14054952.md#1">苹果公司：睡觉时别在床上替iPhone充电</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046620.md#1">逆转动脉粥样硬化的7种天然食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053975.md#1">奇异果令血管年轻21岁 防癌解便秘 3类人需慎吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049542.md#1">研究发现新方法 或可逆转早期和轻度痴呆症</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/12/n14052644.md#1">为自己泡一杯茶  好喝秘诀藏在这里</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129958.md#1">威赫西域的汉宣帝 一道柔情诏书显露夫妻的恩义</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14120907.md#1">【古道人生】结婚十年同寝只一月 夫妻终不能团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137399.md#1">【人物真相】日本“抗共大使”垂秀夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137333.md#1">【十字路口】渝火葬场爆满 中共承认新冠变异？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137325.md#1">【新闻大家谈】中南海1号保镳 涉两高层命案？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136615.md#1">中共央视新闻播出辱习画面 后紧急删除</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136580.md#1">北京地铁车厢断裂515人送医 近千人雪夜逃离</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135801.md#1">周海媚死讯不断反转 堪称现实版《新闻女王》</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135089.md#1">港星周海媚在北京猝逝 旧爱吕良伟发文悼念</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135183.md#1">周海媚离世 曾高调为中共疫苗站台</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135870.md#1">10年前拍完未播 周海媚遗作遭拍卖原因曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：装点节日气氛 给孩子一个惊喜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135019.md#1">苹果防糖尿病、阻癌细胞扩散 品种、吃法全攻略</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128227.md#1">掉发怎么办？中医6招教你长回浓密秀发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/19/n14056859.htm">《青春猪头少年不会梦到娇怜外出妹》：妹妹考高中 哥哥也立功</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/19/n14056859.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
